syntax = "proto3";
package kitty_chan;

/**
* Handle Events from kitty chan Events
**/
service EventsService{
  rpc messageCreate (IGuildMessage) returns (NoResponse);
  rpc messageReactionAdd (IMessageReaction) returns (NoResponse);
  rpc messageReactionRemove (IMessageReaction) returns (NoResponse);
  rpc guildCreate (IBasicGuild) returns (NoResponse);
  rpc guildDelete (IBasicGuild) returns (NoResponse);
  rpc guildMemberAdd (IGuildMember) returns (NoResponse);
  rpc guildMemberRemove (IGuildMember) returns (NoResponse);
}


service GuildService{
  rpc getAllUserGuilds (GetAllUserGuildReq) returns (GetAllUserGuildRes);
}

service ReactionRoleService {
  rpc reactionRolesAction (ReactionRoleActionReqDto) returns (ReactionRoleActionResDto);
}

/**Common**/
message NoResponse{}

/**Guild Message**/
message IGuildMessage{
  string guildId = 1;
  string guildName = 2;
  string channelId = 3;
  string messageId = 4;
  string userId = 5;
  string username = 6;
  string avatar = 7;
  string messageContent = 8;
  IMessageMentions mentions = 9;
  repeated IMessageAttachments attachments = 10;
  bool isBot = 11;
}

message IMessageMentions{
  bool hasMention = 1;
  bool everyone = 2;
  repeated IMessageMentionUsers users = 3;
  repeated IMessageMentionRoles roles = 4;
}

message IMessageMentionUsers{
  string userId = 1;
}

message IMessageMentionRoles{
  string roleId = 1;
}

message IMessageAttachments{
  string name = 1;
  string id = 2;
  int64 size = 3;
  string url = 4;
  string proxyURL = 5;
  int64 height = 6;
  int64 width = 7;
  string contentType = 8;
  string description = 9;
  bool ephemeral = 10;
}

message IBasicGuild{
  string guildId = 1;
  string guildName = 2;
}

message IGuildMember{
  string guildId = 1;
  string userid = 2;
}

message IMessageReaction{
  string guildId = 1;
  string channelId = 2;
  string messageId = 3;
  string userId = 4;
  string messageContent = 5;
  bool isBot = 6;
  IEmoji emoji = 7;
}

message IEmoji{
  bool animated = 1;
  string id = 2;
  string name = 3;
  string createdAt = 4;
}

/**END
  Kitty chan Events
**/

/** Guild Service **/
message GetAllUserGuildReq{
  string discordId = 1;
}

message GetAllUserGuildRes{
  string name = 1;
}

/** Reaction Roles Service **/
message ReactionRoleActionReqDto {
  string name = 1;
  string action = 2;
  string guildId = 3;
  string channelId = 4;
  repeated RolesMapping rolesMapping = 5;
  DiscordEmbedConfig discordEmbedConfig = 6;
  string reactionRoleMessageRef = 7;
}

message ReactionRoleActionResDto {
  string reactionRoleMessageRef = 1;
}

/**Reaction Role Mapping **/
message RolesMapping{
  string name = 1;
  string roleId = 2;
  RolesMappingEmoji emoji = 3;

}

message RolesMappingEmoji{
  string type = 1;
  string id = 2;
  string name = 3;
  string standardEmoji = 4;
}
/*****/

/**Discord Embed **/
message DiscordEmbedConfig{
  string title = 1;
  string description = 2;
  int32 color = 3;
  DiscordEmbedFooter footer = 4;
  repeated DiscordEmbedFields fields = 5;
}

message DiscordEmbedFooter{
  string text = 1;
}

message DiscordEmbedFields{
  string name = 1;
  string value = 2;
  bool inline = 3;
}
/****/
