// Original file: src/proto/kitty_chan.proto

export interface IBasicGuild {
  guildId?: string;
  guildName?: string;
  guildOwner?: string;
  guildMembersCount?: string;
  guildIcon?: string;
}

export interface IBasicGuild__Output {
  guildId?: string;
  guildName?: string;
  guildOwner?: string;
  guildMembersCount?: string;
  guildIcon?: string;
}
