// Original file: src/proto/kitty_chan.proto


export interface ReactionRoleActionReqDto {
  'name'?: (string);
  'action'?: (string);
  'channelId'?: (string);
  'reactionRoleMessageRef'?: (string);
  'discordEmbedConfig'?: (string);
}

export interface ReactionRoleActionReqDto__Output {
  'name'?: (string);
  'action'?: (string);
  'channelId'?: (string);
  'reactionRoleMessageRef'?: (string);
  'discordEmbedConfig'?: (string);
}
